--- a/lab2/window.ui
+++ b/lab2/window.ui
@@ -130,9 +130,9 @@
    <widget class="QLabel" name="lbl_scale_x">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>490</x>
       <y>170</y>
-      <width>16</width>
+      <width>61</width>
       <height>20</height>
      </rect>
     </property>
@@ -143,15 +143,15 @@
      </font>
     </property>
     <property name="text">
-     <string>X</string>
+     <string>X(pxl)</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_scale_y">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>570</x>
       <y>170</y>
-      <width>16</width>
+      <width>71</width>
       <height>20</height>
      </rect>
     </property>
@@ -162,7 +162,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Y</string>
+     <string>Y(pxl)</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_trans">
@@ -187,7 +187,7 @@
    <widget class="QDoubleSpinBox" name="spin_trans_y">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>590</x>
       <y>30</y>
       <width>71</width>
       <height>22</height>
@@ -212,9 +212,9 @@
    <widget class="QLabel" name="lbl_dx">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>490</x>
       <y>10</y>
-      <width>31</width>
+      <width>71</width>
       <height>20</height>
      </rect>
     </property>
@@ -225,13 +225,13 @@
      </font>
     </property>
     <property name="text">
-     <string>dX</string>
+     <string>dX(pxl)</string>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="spin_trans_x">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>490</x>
       <y>30</y>
       <width>71</width>
       <height>22</height>
@@ -258,7 +258,7 @@
      <rect>
       <x>590</x>
       <y>10</y>
-      <width>31</width>
+      <width>71</width>
       <height>20</height>
      </rect>
     </property>
@@ -269,7 +269,7 @@
      </font>
     </property>
     <property name="text">
-     <string>dY</string>
+     <string>dY(pxl)</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_back">
@@ -428,7 +428,7 @@
      <rect>
       <x>560</x>
       <y>300</y>
-      <width>16</width>
+      <width>61</width>
       <height>20</height>
      </rect>
     </property>
