--- a/lab2/window.ui
+++ b/lab2/window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>665</width>
-    <height>494</height>
+    <width>995</width>
+    <height>571</height>
    </rect>
   </property>
   <property name="mouseTracking">
@@ -25,41 +25,16 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>461</width>
-      <height>441</height>
+      <width>761</width>
+      <height>541</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QDial" name="dial">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
-      <y>300</y>
-      <width>50</width>
-      <height>64</height>
-     </rect>
-    </property>
-    <property name="maximum">
-     <number>360</number>
-    </property>
-    <property name="singleStep">
-     <number>10</number>
-    </property>
-    <property name="pageStep">
-     <number>30</number>
-    </property>
-    <property name="wrapping">
-     <bool>true</bool>
-    </property>
-    <property name="notchesVisible">
-     <bool>true</bool>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="spin_scl_x">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>190</y>
+      <x>810</x>
+      <y>170</y>
       <width>71</width>
       <height>22</height>
      </rect>
@@ -71,17 +46,17 @@
      <enum>QAbstractSpinBox::PlusMinus</enum>
     </property>
     <property name="maximum">
-     <double>451.000000000000000</double>
+     <double>1000.000000000000000</double>
     </property>
     <property name="value">
-     <double>225.000000000000000</double>
+     <double>500.000000000000000</double>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="spin_scl_y">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>190</y>
+      <x>910</x>
+      <y>170</y>
       <width>71</width>
       <height>22</height>
      </rect>
@@ -93,45 +68,17 @@
      <enum>QAbstractSpinBox::PlusMinus</enum>
     </property>
     <property name="maximum">
-     <double>431.000000000000000</double>
+     <double>1000.000000000000000</double>
     </property>
     <property name="value">
-     <double>215.000000000000000</double>
-    </property>
-   </widget>
-   <widget class="QSlider" name="slider_kx">
-    <property name="geometry">
-     <rect>
-      <x>520</x>
-      <y>230</y>
-      <width>131</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>20</number>
-    </property>
-    <property name="value">
-     <number>10</number>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-    <property name="tickPosition">
-     <enum>QSlider::TicksBothSides</enum>
-    </property>
-    <property name="tickInterval">
-     <number>5</number>
+     <double>500.000000000000000</double>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_scale_x">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>170</y>
+      <x>810</x>
+      <y>150</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -149,8 +96,8 @@
    <widget class="QLabel" name="lbl_scale_y">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>170</y>
+      <x>910</x>
+      <y>150</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -168,10 +115,10 @@
    <widget class="QPushButton" name="btn_trans">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>70</y>
-      <width>111</width>
-      <height>31</height>
+      <x>810</x>
+      <y>80</y>
+      <width>131</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -187,8 +134,8 @@
    <widget class="QDoubleSpinBox" name="spin_trans_y">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>30</y>
+      <x>900</x>
+      <y>40</y>
       <width>71</width>
       <height>22</height>
      </rect>
@@ -200,10 +147,10 @@
      <enum>QAbstractSpinBox::PlusMinus</enum>
     </property>
     <property name="maximum">
-     <double>431.000000000000000</double>
+     <double>1000.000000000000000</double>
     </property>
     <property name="singleStep">
-     <double>0.500000000000000</double>
+     <double>1.000000000000000</double>
     </property>
     <property name="value">
      <double>0.000000000000000</double>
@@ -212,8 +159,8 @@
    <widget class="QLabel" name="lbl_dx">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>10</y>
+      <x>800</x>
+      <y>20</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -231,10 +178,10 @@
    <widget class="QDoubleSpinBox" name="spin_trans_x">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>30</y>
-      <width>71</width>
-      <height>22</height>
+      <x>800</x>
+      <y>40</y>
+      <width>61</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="wrapping">
@@ -244,10 +191,10 @@
      <enum>QAbstractSpinBox::PlusMinus</enum>
     </property>
     <property name="maximum">
-     <double>451.000000000000000</double>
+     <double>1000.000000000000000</double>
     </property>
     <property name="singleStep">
-     <double>0.500000000000000</double>
+     <double>1.000000000000000</double>
     </property>
     <property name="value">
      <double>0.000000000000000</double>
@@ -256,8 +203,8 @@
    <widget class="QLabel" name="lbl_dy">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>10</y>
+      <x>900</x>
+      <y>20</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -272,23 +219,23 @@
      <string>dY(pxl)</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_back">
+   <widget class="QPushButton" name="btn_undo">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>790</x>
       <y>420</y>
-      <width>101</width>
-      <height>41</height>
+      <width>171</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Courier New</family>
-      <pointsize>12</pointsize>
+      <pointsize>18</pointsize>
      </font>
     </property>
     <property name="text">
-     <string> В начало </string>
+     <string>Отмена</string>
     </property>
     <property name="checkable">
      <bool>false</bool>
@@ -297,8 +244,8 @@
    <widget class="QLabel" name="lbl_scale_kx">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>230</y>
+      <x>790</x>
+      <y>200</y>
       <width>21</width>
       <height>20</height>
      </rect>
@@ -313,39 +260,11 @@
      <string>KX</string>
     </property>
    </widget>
-   <widget class="QSlider" name="slider_ky">
-    <property name="geometry">
-     <rect>
-      <x>520</x>
-      <y>260</y>
-      <width>131</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>20</number>
-    </property>
-    <property name="value">
-     <number>10</number>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-    <property name="tickPosition">
-     <enum>QSlider::TicksBothSides</enum>
-    </property>
-    <property name="tickInterval">
-     <number>5</number>
-    </property>
-   </widget>
    <widget class="QLabel" name="lbl_scale_ky">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>260</y>
+      <x>890</x>
+      <y>200</y>
       <width>21</width>
       <height>20</height>
      </rect>
@@ -363,29 +282,7 @@
    <widget class="QDoubleSpinBox" name="spin_turn_y">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>330</y>
-      <width>71</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="wrapping">
-     <bool>true</bool>
-    </property>
-    <property name="buttonSymbols">
-     <enum>QAbstractSpinBox::PlusMinus</enum>
-    </property>
-    <property name="maximum">
-     <double>431.000000000000000</double>
-    </property>
-    <property name="value">
-     <double>215.000000000000000</double>
-    </property>
-   </widget>
-   <widget class="QDoubleSpinBox" name="spin_turn_x">
-    <property name="geometry">
-     <rect>
-      <x>580</x>
+      <x>910</x>
       <y>300</y>
       <width>71</width>
       <height>22</height>
@@ -398,17 +295,39 @@
      <enum>QAbstractSpinBox::PlusMinus</enum>
     </property>
     <property name="maximum">
-     <double>451.000000000000000</double>
+     <double>1000.000000000000000</double>
     </property>
     <property name="value">
-     <double>225.000000000000000</double>
+     <double>500.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="spin_turn_x">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>300</y>
+      <width>71</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="wrapping">
+     <bool>true</bool>
+    </property>
+    <property name="buttonSymbols">
+     <enum>QAbstractSpinBox::PlusMinus</enum>
+    </property>
+    <property name="maximum">
+     <double>1000.000000000000000</double>
+    </property>
+    <property name="value">
+     <double>500.000000000000000</double>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_turn_y">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>330</y>
+      <x>890</x>
+      <y>300</y>
       <width>16</width>
       <height>20</height>
      </rect>
@@ -426,7 +345,7 @@
    <widget class="QLabel" name="lbl_turn_x">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>790</x>
       <y>300</y>
       <width>61</width>
       <height>20</height>
@@ -445,8 +364,8 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>120</y>
+      <x>820</x>
+      <y>130</y>
       <width>118</width>
       <height>3</height>
      </rect>
@@ -458,8 +377,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>290</y>
+      <x>820</x>
+      <y>280</y>
       <width>118</width>
       <height>3</height>
      </rect>
@@ -471,7 +390,7 @@
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>820</x>
       <y>410</y>
       <width>118</width>
       <height>3</height>
@@ -481,35 +400,13 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_backstep">
-    <property name="geometry">
-     <rect>
-      <x>590</x>
-      <y>420</y>
-      <width>61</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Courier New</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>&lt;-</string>
-    </property>
-    <property name="checkable">
-     <bool>false</bool>
-    </property>
-   </widget>
    <widget class="QPushButton" name="btn_scale">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>130</y>
-      <width>111</width>
-      <height>31</height>
+      <x>820</x>
+      <y>230</y>
+      <width>121</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -519,16 +416,16 @@
      </font>
     </property>
     <property name="text">
-     <string>Масштаб </string>
+     <string>Масштаб</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_turn">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>370</y>
+      <x>830</x>
+      <y>360</y>
       <width>111</width>
-      <height>31</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -539,6 +436,104 @@
     </property>
     <property name="text">
      <string>Поворот</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="spin_kx">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>200</y>
+      <width>51</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <double>-20.000000000000000</double>
+    </property>
+    <property name="maximum">
+     <double>20.000000000000000</double>
+    </property>
+    <property name="singleStep">
+     <double>0.250000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="spin_ky">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>200</y>
+      <width>51</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <double>-20.000000000000000</double>
+    </property>
+    <property name="maximum">
+     <double>20.000000000000000</double>
+    </property>
+    <property name="singleStep">
+     <double>0.250000000000000</double>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_scale_kx_2">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>330</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Courier</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>На            градусов</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="spin_deg">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>330</y>
+      <width>61</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>1</number>
+    </property>
+    <property name="minimum">
+     <double>-360.000000000000000</double>
+    </property>
+    <property name="maximum">
+     <double>360.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_back">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>480</y>
+      <width>171</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Courier New</family>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string> В начало </string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
