--- a/lab5/window.ui
+++ b/lab5/window.ui
@@ -44,19 +44,6 @@
      </property>
     </column>
    </widget>
-   <widget class="QPushButton" name="addrow">
-    <property name="geometry">
-     <rect>
-      <x>600</x>
-      <y>470</y>
-      <width>161</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Добавить точку</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="paint">
     <property name="geometry">
      <rect>
@@ -94,6 +81,24 @@
     </property>
     <property name="text">
      <string>Очистить</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="delay">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>480</y>
+      <width>141</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>С задержкой</string>
     </property>
    </widget>
   </widget>
