--- a/lab6/window.ui
+++ b/lab6/window.ui
@@ -30,7 +30,7 @@
       <x>590</x>
       <y>10</y>
       <width>211</width>
-      <height>301</height>
+      <height>241</height>
      </rect>
     </property>
     <column>
@@ -205,7 +205,7 @@
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>340</y>
+      <y>330</y>
       <width>211</width>
       <height>32</height>
      </rect>
@@ -241,6 +241,51 @@
     </property>
     <property name="text">
      <string>Y</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>300</y>
+      <width>71</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Радиус</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="addcircle">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>270</y>
+      <width>211</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Добавить окружность</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="rad">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>300</y>
+      <width>48</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>561</number>
+    </property>
+    <property name="value">
+     <number>160</number>
     </property>
    </widget>
   </widget>
