--- a/lab10/window.ui
+++ b/lab10/window.ui
@@ -153,6 +153,9 @@
     <property name="maximum">
      <number>45</number>
     </property>
+    <property name="value">
+     <number>20</number>
+    </property>
    </widget>
    <widget class="QDial" name="dial_y">
     <property name="geometry">
@@ -170,7 +173,7 @@
      <number>45</number>
     </property>
     <property name="value">
-     <number>0</number>
+     <number>-10</number>
     </property>
    </widget>
    <widget class="QDial" name="dial_z">
@@ -424,7 +427,17 @@
      <double>0.100000000000000</double>
     </property>
     <property name="value">
-     <double>0.300000000000000</double>
+     <double>0.100000000000000</double>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="funcs">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>560</y>
+      <width>221</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
